{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 109,
  "lineage": "c113163a-20fb-e917-935e-635ff456da19",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1fa75dd1-031b-4131-87b1-2cee85ae75ab/resourceGroups/arg/providers/Microsoft.Network/networkInterfaces/tvnet_nic",
            "internal_domain_name_suffix": "4uskngsot5zuflb2jmnpedysnf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1fa75dd1-031b-4131-87b1-2cee85ae75ab/resourceGroups/arg/providers/Microsoft.Network/virtualNetworks/tpvnet/subnets/tvnet_sub"
              }
            ],
            "location": "eastus",
            "name": "tvnet_nic",
            "private_ip_address": "10.0.0.10",
            "private_ip_addresses": [
              "10.0.0.10"
            ],
            "resource_group_name": "arg"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_subnet.sub",
            "azurerm_virtual_network.tvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ansg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1fa75dd1-031b-4131-87b1-2cee85ae75ab/resourceGroups/arg/providers/Microsoft.Network/networkSecurityGroups/app_nsg",
            "location": "eastus",
            "name": "app_nsg",
            "resource_group_name": "arg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1fa75dd1-031b-4131-87b1-2cee85ae75ab/resourceGroups/arg/providers/Microsoft.Network/publicIPAddresses/testpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.51.133.131",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "testpip",
            "resource_group_name": "arg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/1fa75dd1-031b-4131-87b1-2cee85ae75ab/resourceGroups/arg/providers/Microsoft.Network/routeTables/custom-route-table/routes/route1",
            "name": "route1",
            "next_hop_in_ip_address": "10.0.5.0",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "arg",
            "route_table_name": "custom-route-table",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_route_table.custom_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "custom_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/1fa75dd1-031b-4131-87b1-2cee85ae75ab/resourceGroups/arg/providers/Microsoft.Network/routeTables/custom-route-table",
            "location": "eastus",
            "name": "custom-route-table",
            "resource_group_name": "arg",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1fa75dd1-031b-4131-87b1-2cee85ae75ab/resourceGroups/arg/providers/Microsoft.Network/virtualNetworks/tpvnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "arg",
            "virtual_network_name": "tpvnet"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_virtual_network.tvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1fa75dd1-031b-4131-87b1-2cee85ae75ab/resourceGroups/arg/providers/Microsoft.Network/virtualNetworks/tpvnet/subnets/tvnet_sub",
            "name": "tvnet_sub",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "arg",
            "virtual_network_name": "tpvnet"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_virtual_network.tvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9aa624f5-9f4e-42f3-ac3c-4b1af20f126d",
            "id": "/subscriptions/1fa75dd1-031b-4131-87b1-2cee85ae75ab/resourceGroups/arg/providers/Microsoft.Network/virtualNetworks/tpvnet",
            "location": "eastus",
            "name": "tpvnet",
            "resource_group_name": "arg"
          },
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    }
  ]
}